@@ -1,6 +1,6 @@
 id=system_tweaks
-name=LHMods
-version=V1.2.5
-versionCode=004
+name=LHTweaker
+version=V1.3
+versionCode=005
 author=@lowrran_01
-description=Optimize Android for better experience, battery and performance.
+description=LHT Optimize Android for better experience, battery and performance.
